--- a/style.css
+++ b/style.css
@@ -87,7 +87,13 @@ body {
 
 .caption {
   margin-top: 0.5rem;
-  font-size: 2.85rem;
+  font-size: 1.85rem;
+  opacity: 0.7;
+}
+
+.caption2 {
+  margin-top: 0.5rem;
+  font-size: 0.85rem;
   opacity: 0.7;
 }
 
@@ -113,4 +119,5 @@ body {
   font-size: 0.8rem;
   opacity: 0.6;
 }
+
 
